@@ -257,7 +257,81 @@ Returns Wikibase::Datatype::Mediainfo instance.
  p $struct_hr;
 
  # Output:
- # TODO
+ # {
+ #     descriptions   {},
+ #     id             "Q42",
+ #     labels         {
+ #         cs   {
+ #             language   "cs",
+ #             value      "Douglas Adams"
+ #         },
+ #         en   {
+ #             language   "en",
+ #             value      "Douglas Adams"
+ #         }
+ #     },
+ #     ns             6,
+ #     pageid         123,
+ #     statements     {
+ #         P21   [
+ #             [0] {
+ #                     mainsnak   {
+ #                         datavalue   {
+ #                             type    "wikibase-entityid",
+ #                             value   {
+ #                                 entity-type   "item",
+ #                                 id            "Q6581097",
+ #                                 numeric-id    6581097
+ #                             }
+ #                         },
+ #                         property    "P21",
+ #                         snaktype    "value"
+ #                     },
+ #                     rank       "normal",
+ #                     type       "statement"
+ #                 }
+ #         ],
+ #         P31   [
+ #             [0] {
+ #                     mainsnak           {
+ #                         datavalue   {
+ #                             type    "wikibase-entityid",
+ #                             value   {
+ #                                 entity-type   "item",
+ #                                 id            "Q5",
+ #                                 numeric-id    5
+ #                             }
+ #                         },
+ #                         property    "P31",
+ #                         snaktype    "value"
+ #                     },
+ #                     qualifiers         {
+ #                         P642   [
+ #                             [0] {
+ #                                     datavalue   {
+ #                                         type    "wikibase-entityid",
+ #                                         value   {
+ #                                             entity-type   "item",
+ #                                             id            "Q474741",
+ #                                             numeric-id    474741
+ #                                         }
+ #                                     },
+ #                                     property    "P642",
+ #                                     snaktype    "value"
+ #                                 }
+ #                         ]
+ #                     },
+ #                     qualifiers-order   [
+ #                         [0] "P642"
+ #                     ],
+ #                     rank               "normal",
+ #                     type               "statement"
+ #                 }
+ #         ]
+ #     },
+ #     title          "Q42",
+ #     type           "mediainfo"
+ # }
 
 =head1 EXAMPLE2
 
@@ -271,7 +345,73 @@ Returns Wikibase::Datatype::Mediainfo instance.
 
  # Item structure.
  my $struct_hr = {
- # TODO
+         'descriptions' => {},
+         'id' => 'Q42',
+         'labels' => {
+                 'cs' => {
+                         'language' => 'cs',
+                         'value' => 'Douglas Adams',
+                 },
+                 'en' => {
+                         'language' => 'en',
+                         'value' => 'Douglas Adams',
+                 },
+         },
+         'ns' => 6,
+         'pageid' => 123,
+         'statements' => {
+                 'P21' => [{
+                         'mainsnak' => {
+                                 'datavalue' => {
+                                         'type' => 'wikibase-entityid',
+                                         'value' => {
+                                                 'entity-type' => 'item',
+                                                 'id' => 'Q6581097',
+                                                 'numeric-id' => 6581097,
+                                         },
+                                 },
+                                 'property' => 'P21',
+                                 'snaktype' => 'value',
+                         },
+                         'rank' => 'normal',
+                         'type' => 'statement',
+                 }],
+                 'P31' => [{
+                         'mainsnak' => {
+                                 'datavalue' => {
+                                         'type' => 'wikibase-entityid',
+                                         'value' => {
+                                                 'entity-type' => 'item',
+                                                 'id' => 'Q5',
+                                                 'numeric-id' => 5,
+                                         },
+                                 },
+                                 'property' => 'P31',
+                                 'snaktype' => 'value',
+                         },
+                         'qualifiers' => {
+                                 'P642' => [{
+                                         'datavalue' => {
+                                                 'type' => 'wikibase-entityid',
+                                                 'value' => {
+                                                         'entity-type' => 'item',
+                                                         'id' => 'Q474741',
+                                                         'numeric-id' => 474741,
+                                                 }
+                                         },
+                                         'property' => 'P642',
+                                         'snaktype' => 'value',
+                                 }],
+                         },
+                         'qualifiers-order' => [
+                                 'P642',
+                         ],
+                         'rank' => 'normal',
+                         'type' => 'statement',
+                 }],
+         },
+         'title' => 'Q42',
+         'type' => 'mediainfo',
  };
 
  # Get object.
@@ -281,7 +421,31 @@ Returns Wikibase::Datatype::Mediainfo instance.
  p $obj;
 
  # Output:
- # TODO
+ # Wikibase::Datatype::Mediainfo  {
+ #     parents: Mo::Object
+ #     public methods (5):
+ #         BUILD
+ #         Error::Pure:
+ #             err
+ #         Mo::utils:
+ #             check_array_object, check_number, check_number_of_items
+ #     private methods (0)
+ #     internals: {
+ #         descriptions   [],
+ #         id             "Q42",
+ #         labels         [
+ #             [0] Wikibase::Datatype::Value::Monolingual,
+ #             [1] Wikibase::Datatype::Value::Monolingual
+ #         ],
+ #         ns             6,
+ #         page_id        123,
+ #         statements     [
+ #             [0] Wikibase::Datatype::MediainfoStatement,
+ #             [1] Wikibase::Datatype::MediainfoStatement
+ #         ],
+ #         title          "Q42"
+ #     }
+ # }
 
 =head1 DEPENDENCIES
 
