@@ -1,5 +1,6 @@
 0.11
  - Fix example in Wikibase::Datatype::Struct::Language.
+ - Fix Mediainfo examples.
  - Improve Struct documentation.
  - Rewrite to use example names.
 
